objects/ArchivedFeedComment__c.object
<CustomObject>
    <fields>
        <fullName>ArchivedFeedItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ArchivedFeedItem</label>
        <referenceTo>ArchivedFeedItem__c</referenceTo>
        <relationshipLabel>ArchivedFeedComments</relationshipLabel>
        <relationshipName>ArchivedFeedComments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommentBody__c</fullName>
        <description>Body Text for the Comment</description>
        <label>CommentBody</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the value of the field CreatedById on the original FeedComment</description>
        <label>Feed Comment Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ArchivedFeedComments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FeedCommentId__c</fullName>
        <externalId>true</externalId>
        <label>FeedCommentId</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FeedItemId__c</fullName>
        <description>This is a polimorphic key , example it can point to an AccountFeed or a GroupFeed</description>
        <label>FeedItemId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inserted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains the value of the field InsertedById on the original FeedComment</description>
        <label>Feed Comment Inserted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ArchivedFeedComments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <description>This is also a polimorphic key , if (for example) , FeedItem points to an ACCOUNT FEED , this ParentId field will point to an ACCOUNT</description>
        <label>ParentId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentName__c</fullName>
        <formula>ArchivedFeedItem__r.GroupName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentObjectType__c</fullName>
        <label>ParentObjectType</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RelatedRecordId__c</fullName>
        <label>RelatedRecordId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isParentDeleted__c</fullName>
        <formula>ArchivedFeedItem__r.isParentDeleted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent is Deleted</label>
        <type>Text</type>
    </fields>
    <label>ArchivedFeedComment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ParentId__c</columns>
        <columns>CommentBody__c</columns>
        <columns>ArchivedFeedItem__c</columns>
        <columns>isDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ArchivedFeedComment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ArchivedFeedComments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>